--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           </div>
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-telegram fa-3x mb-3 sr-contact"></i>
-            <p class="text-muted mb-0"><a href="https://t.me/ciphschat">CHATGroup</a></p>
+            <p class="text-muted mb-0"><a href="https://t.me/ciphschat">GROUPChat</a></p>
           </div>
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-comments fa-3x mb-3 sr-contact"></i>
