--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">CIPHS© Community & the Currency</h2>
+            <h2 class="section-heading text-white">CIPHS© as Currency</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Starting with CIPHS is simple. A Cryptocurrency with governance by it's Community, based on Ethereum Smart Contract with unique built-in functions for DApps integration. These ensured additional security to User's funds and also providing smooth global Cryptocurrency experience ever! CIPHS are used in the way of native paper money to make purchase, savings or turn it to other asset. While, CIPHS is not limited to conventional fiat currency. By taking advantage of Blockchain technology, a Currency can be adopted for many reason. However, without any rights to control a Currency used is most ridiculous as Cash are used for exchange with value. While, things such as uncontrol market manipulation of a Currency have cause devastating loss and unfair profit to the Community that use it, resulting of poor financial growth to the Community itself. While CIPHS is a Digital Currency built-in with Meritocracy System for the Community to take control these issue. With governance to critical issue, making CIPHS the coolest Cryptocurrency Community ever!  </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Discover CIPHS©</a>
@@ -148,8 +148,8 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-thumbs-up text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Supply by Votes</h3>
-              <p class="text-muted mb-0">Central Minter</p>
+              <h3 class="mb-3">Central Supply by Votes</h3>
+              <p class="text-muted mb-0">Meritocracy Minter</p>
             </div>
           </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -233,7 +233,8 @@
         <div class="row">
           <div class="col-lg-4 mx-auto text-center">
            <h2 class="section-heading text-white">Market Exchange</h2>
-             <hr class="light my-4">              
+             <hr class="light my-4">
+             <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>
              <a class="btn btn-light btn-xl js-scroll-trigger" href="http://bit.ly/ciphs-eth">EtherDelta</a>   
            </div>
          </div>
