--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">CONTRACT ADDRESS</h2>            
             <p><a href="https://etherscan.io/address/0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e">0xa4ff5ce0556f9ff0797ae525ec5ba9b723878a3e</a></p>
+            <p>1 CIPHS = 0.00000100 ETH</p>
             <hr class="my-4">
           </div>
         </div>
@@ -221,8 +222,8 @@
             <h2 class="section-heading text-white">Getting CIPHS is Simple</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation (do not send Ether from exchange wallet, you have been warned) Or simply buy CIPHS over the major exchange market without exclusive privilege (at market price) as CIPHSter.</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Contract Address</a>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#exchange">Market Exchange</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Buy from Contract</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#exchange">Buy from Exchange</a>
           </div>
         </div>
       </div>
@@ -232,7 +233,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mx-auto text-center">
-           <h2 class="section-heading text-white">Market Exchange</h2>
+           <h2 class="section-heading text-white">Exchange Market</h2>
              <hr class="light my-4">
              <p class="text-faded mb-4">Buying price for CIPHS on major exchange market is lesser, this is to maintain steady growth for both users and investors. CIPHS price may be different between exchange. Many factors can contribute to price varies on each exchange, such as local political situation, inflation or any related.</p>
              <a href="http://bit.ly/ciphs-eth"><img src="img/portfolio/fullsize/1.jpg" alt="etherdelta.io" style="width:42px;height:42px;border:0;"></a>
