--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -218,10 +218,10 @@
      <section class="bg-warning text-dark" id="investment">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center text-dark">
+          <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Getting CIPHS is Simple</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. Investor's funds will be use for CIPHS.ORG development. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation (do not send Ether from exchange wallet, you have been warned).. Or you could simply buy CIPHS over the major exchange market without exclusive privilege (at market price) as CIPHSter.</p>
+            <p class="text-dark mb-4">Directly send Ether from your favorite ERC20 wallets, CIPHS will be auto convert based on current Investor rate regardless of current market price. Investor's funds will be use for CIPHS.ORG development. As in return, the Investor's wallet are eligible to receive new minted CIPHS upon succesful proposal of addiditional total supply as a method of distribution into circulation (do not send Ether from exchange wallet, you have been warned).. Or you could simply buy CIPHS over the major exchange market without exclusive privilege (at market price) as CIPHSter.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contract">Buy from Contract</a>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#exchange">Buy from Exchange</a>
           </div>
